fix navbar menu items color and spacing problems (#2285)
This PR makes a couple very minor overrides to the default navbar styles to fix the problem of the items being invisible until hover and the spacing being weird, and also hides the "menu" button when the screen is wide enough to display all the individual navbar items.

--- a/frontend/sass/laletterbuilder/_navbar-overrides.scss
+++ b/frontend/sass/laletterbuilder/_navbar-overrides.scss
@@ -56,6 +56,20 @@ nav.navbar {
     color: $primary;
     text-decoration: underline;
     min-width: 150px;
+
+    @include desktop {
+      display: none;
+    }
+  }
+
+  .navbar-item,
+  .navbar-link {
+    color: $primary;
+    height: 100%;
+  }
+
+  .navbar-link::after {
+    border-color: $primary;
   }
 
   //OVERRIDES FROM DEFAULT NAVBAR STYLING
